--- a/AFF1F358F.opa/meta.yml
+++ b/AFF1F358F.opa/meta.yml
@@ -1,5 +1,5 @@
 id: AFF1F358F
-source: D3877final
+source: https://github.com/Esukhia/chojuk-alignement/tree/master/D3877-final
 source_metadata:
   title: chojuk
   creation_method: proof read
